--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "nodemon"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
