--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-git",
   "version": "1.0.0",
   "description": "Creating REST API with express",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "nodemon"
   },
